--- a/department-service.yml
+++ b/department-service.yml
@@ -23,4 +23,9 @@ eureka:
       serverUrl:
         defaultZone: http://localhost:8761/eureka/
 
-# Message
+# Spring Actuator COnfig
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
