--- a/employee-service.yml
+++ b/employee-service.yml
@@ -13,9 +13,19 @@ spring:
     username: root
     password: s3cr3t
     url: jdbc:postgresql://localhost:5432/employeeDB
+  boot:
+    message: Hello, Department Service from Github
 
+# Register Netflix Eureka Server
 eureka:
   instance:
     client:
       serverUrl:
         defaultZone: http://localhost:8761/eureka/
+
+# Spring Actuator Config
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
