--- a/employee-service.yml
+++ b/employee-service.yml
@@ -23,9 +23,21 @@ eureka:
       serverUrl:
         defaultZone: http://localhost:8761/eureka/
 
-# Spring Actuator Config
+# Spring Actuator and Zipkin Config
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  tracing:
+    sampling:
+      probability: 1.0
+
+
+# Logging Config
+logging:
+  pattern:
+    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+  level:
+    org.springframework.web: debug
+
