--- a/employee-service.yml
+++ b/employee-service.yml
@@ -24,14 +24,36 @@ eureka:
         defaultZone: http://localhost:8761/eureka/
 
 # Spring Actuator and Zipkin Config
+# Actuator endpoints for Circuit Breaker
 management:
+  endpoint:
+    health:
+      show-details: always
   endpoints:
     web:
       exposure:
         include: "*"
+  health:
+    circuitbreakers:
+      enabled: true
   tracing:
     sampling:
       probability: 1.0
+
+# Circuit Breaker Configuration
+resilience4j:
+  circuitbreaker:
+    instances:
+      EMPLOYEE-SERVICE:
+        register-health-indicator: true
+        failure-rate-threshold: 50
+        minimum-number-of-calls: 5
+        automatic-transition-from-open-to-half-open-enabled: true
+        permitted-number-of-calls-in-half-open-state: 3
+        sliding-window-size: 10
+        sliding-window-type: count_based
+        wait-duration-in-open-state:
+          seconds: 5
 
 
 # Logging Config
