--- a/organization-service.yml
+++ b/organization-service.yml
@@ -20,3 +20,10 @@ eureka:
     client:
       serverUrl:
         defaultZone: http://localhost:8761/eureka/
+
+# Actuator endpoints for Circuit Breaker
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
