--- a/employee-service.yml
+++ b/employee-service.yml
@@ -37,8 +37,13 @@ management:
     circuitbreakers:
       enabled: true
   tracing:
+    enabled: true
     sampling:
       probability: 1.0
+
+zipkin:
+  tracing: 
+    endpoint: http://127.0.0.1:9411
 
 # Logging Config
 logging:
